--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.05 2019-09-04
+ - S3: use correct hostname for buckets in us-east-1 (Issue #2). Thanks namotco
+ - introduce a new SES signer for obtaining SES passwords
+
 0.04 2018-11-28
  - use gmtime instead of localtime. Only machines in GMT could
    sign properly
